// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Promotion resolver adjustmentOperations 1`] = `
Array [
  Object {
    "args": Array [
      Object {
        "config": null,
        "name": "facetValueIds",
        "type": "facetValueIds",
      },
    ],
    "code": "promo_action",
    "description": "description for promo_action",
  },
]
`;

exports[`Promotion resolver adjustmentOperations 2`] = `
Array [
  Object {
    "args": Array [
      Object {
        "config": null,
        "name": "arg",
        "type": "int",
      },
    ],
    "code": "promo_condition",
    "description": "description for promo_condition",
  },
  Object {
    "args": Array [
      Object {
        "config": null,
        "name": "arg",
        "type": "int",
      },
    ],
    "code": "promo_condition2",
    "description": "description for promo_condition2",
  },
]
`;

exports[`Promotion resolver createPromotion 1`] = `
Object {
  "actions": Array [
    Object {
      "args": Array [
        Object {
          "name": "facetValueIds",
          "type": "facetValueIds",
          "value": "[\\"T_1\\"]",
        },
      ],
      "code": "promo_action",
    },
  ],
  "conditions": Array [
    Object {
      "args": Array [
        Object {
          "name": "arg",
          "type": "int",
          "value": "500",
        },
      ],
      "code": "promo_condition",
    },
  ],
  "couponCode": "TEST123",
  "enabled": true,
  "endsAt": "2019-11-30T23:00:00.000Z",
  "name": "test promotion",
  "startsAt": "2019-10-29T23:00:00.000Z",
}
`;

exports[`Promotion resolver updatePromotion 1`] = `
Object {
  "actions": Array [
    Object {
      "args": Array [
        Object {
          "name": "facetValueIds",
          "type": "facetValueIds",
          "value": "[\\"T_1\\"]",
        },
      ],
      "code": "promo_action",
    },
  ],
  "conditions": Array [
    Object {
      "args": Array [
        Object {
          "name": "arg",
          "type": "int",
          "value": "90",
        },
      ],
      "code": "promo_condition",
    },
    Object {
      "args": Array [
        Object {
          "name": "arg",
          "type": "int",
          "value": "10",
        },
      ],
      "code": "promo_condition2",
    },
  ],
  "couponCode": "TEST1235",
  "enabled": true,
  "endsAt": "2019-05-31T22:00:00.000Z",
  "name": "test promotion",
  "startsAt": "2019-05-29T22:00:00.000Z",
}
`;
